Update README.md
Prise en compte de remarques de Landry